# api/src/modules/countries/countries.controller.ts
@@ -1,7 +1,7 @@
 import { Controller, Get } from '@nestjs/common';
 import { ApiResponse, ApiTags } from '@nestjs/swagger';
 import { CountriesService } from './countries.service';
-import { CountriesDto, CurrenciesDto } from './countries.dto';
+import { CountriesDto, CurrenciesDto, LanguagesDto } from './countries.dto';
 
 @ApiTags('countries')
 @Controller('countries')
@@ -18,5 +18,11 @@ export class CountriesController {
   @ApiResponse({ status: 200, type: CurrenciesDto })
   async getCurrencies(): Promise<CurrenciesDto> {
     return this.countriesService.getCurrencies();
+  }
+
+  @Get('languages')
+  @ApiResponse({ status: 200, type: LanguagesDto })
+  async getLanguages(): Promise<LanguagesDto> {
+    return this.countriesService.getLanguages();
   }
 }
